Fix sidebar top spacing on no-frame and framed windows

--- a/src/sass/global.sass
+++ b/src/sass/global.sass
@@ -109,7 +109,6 @@ img
 .gradient
   background: linear-gradient(176.27deg, var(--secondary) 1.69%, var(--primary) 72.01%)
   border-radius: 0px 30px 0px 0px
-  top: 34px !important
 
 .b-sidebar
   transition: 0.2s
@@ -117,6 +116,12 @@ img
 
 .b-sidebar-body
   overflow-x: hidden
+
+.sidebar-top-low-spacing
+  top: 10px !important
+
+.sidebar-top-high-spacing
+  top: 10px !important
 
 .card
   background-color: transparent !important
